Few changes in the foders

--- a/example/Run_model_singlearea.ipynb
+++ b/example/Run_model_singlearea.ipynb
@@ -22,11 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "d5e9fa8b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(0, '../code') # use this to call the module from other folder\n",
     "from uvgrowmodel import Growth_model as vgm\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2d74c069",
    "metadata": {},
    "outputs": [
@@ -305,13 +307,13 @@
        "[1095 rows x 13 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filename = r'data\\Embrapa_daily_1095days.txt'\n",
+    "filename = r'..\\data\\Embrapa_daily_1095days.txt'\n",
     "\n",
     "wdata = pd.read_csv(filename, skiprows=0,usecols=['Day','TMean','TMax','TMin','RHMean','RHMax','RHMmin',\\\n",
     "        'Rain','VMean','VMax','VDir','Rad','Eto'], sep=';', engine='python', parse_dates=True)\n",
