Adjustments in the examples

--- a/examples/Run_model_singlearea.ipynb
+++ b/examples/Run_model_singlearea.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "d5e9fa8b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "2d74c069",
    "metadata": {},
    "outputs": [
@@ -307,13 +307,13 @@
        "[1095 rows x 13 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filename = r'..\\data\\Embrapa_daily_1095days.txt'\n",
+    "filename = r'..\\data\\weatherdata\\Embrapa_daily_1095days.txt'\n",
     "\n",
     "wdata = pd.read_csv(filename, skiprows=0,usecols=['Day','TMean','TMax','TMin','RHMean','RHMax','RHMmin',\\\n",
     "        'Rain','VMean','VMax','VDir','Rad','Eto'], sep=';', engine='python', parse_dates=True)\n",
