--- a/examples/Run_model_multiareas.ipynb
+++ b/examples/Run_model_multiareas.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Example to run the vegetation grow model adapted to urban areas for multiple areas\n",
     "#### The model runs based on a shapefile. In this simulation, 3 years of data are used. It is possible to run the model daily, but data stored from previous day is necessary for this case. \n",
-    "#### For  more details of the model in Escobar et al. (2021)\n"
+    "#### For  more details of the model in Escobar-Silva et al. (2021)\n"
    ]
   },
   {
